{
    "name": "InputActions",
    "maps": [
        {
            "name": "Mouse",
            "id": "bacfa555-dbc7-43cc-8e74-f3d77bf37f5a",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "50e72ba3-0f94-47fc-a75a-688ccc2307a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "17f4da0f-9447-4bb8-ab09-1eada31d1223",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Position",
                    "type": "PassThrough",
                    "id": "9039950e-9f80-4c72-ae6b-c38c1d28a2b0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeltaPosition",
                    "type": "PassThrough",
                    "id": "b2b0f748-3ff4-4fb5-a629-863dbd21a9a6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8f0ac9f3-e260-445b-bcf6-43c10ea6cd27",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "313f07f6-bb72-4418-abac-79ecb23fd3f6",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ece7eb2f-bda5-4a06-9780-1ab36d61671b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeltaPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c604df75-4e27-4e49-a0f1-12408fc5cdc3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}